--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,11 +1,16 @@
 <ng-container *ngIf="{
   isLoading: eventsFacadeService.isLoading$ | async,
   events: eventsFacadeService.events$ | async,
-  editableCell: editableCell$ | async
+  editableCell: editableCell$ | async,
+  isAddingNewRow: isAddingNewRow$ | async
 } as data">
-  <i *ngIf="data.isLoading">Loading...</i>
+  <button (click)="enterAddNewRowMode()" [disabled]="data.isAddingNewRow">Add row</button>
 
   <table>
+    <div *ngIf="data.isLoading" class="overlay">
+      Loading...
+    </div>
+
     <thead>
     <tr>
       <th *ngFor="let header of tableHeaders">
@@ -13,15 +18,31 @@
       </th>
     </tr>
     </thead>
+
     <tbody>
+    <tr *ngIf="data.isAddingNewRow">
+      <td>
+        <button style="color: green" (click)="saveRow()">Save</button>
+        <button (click)="leaveAddNewRowMode()">x</button>
+      </td>
+      <td *ngFor="let key of tableKeys">
+        <ng-container *ngIf="key !== 'eventId'">
+          <input type="text" [(ngModel)]="newRowValue[key]"/>
+        </ng-container>
+      </td>
+    </tr>
+
     <tr *ngFor="let event of data.events">
       <td>
         <button style="color: red" (click)="deleteRow(event.eventId)">del</button>
       </td>
+
       <td *ngFor="let key of tableKeys" (click)="enterEditMode(event, key)">
         <ng-container
           *ngIf="data.editableCell && data.editableCell.eventId === event.eventId && data.editableCell.key === key; else defaultView">
+
           <input type="text" appFocusOnRender [(ngModel)]="inputValue"/>
+
           <button (click)="saveCell($event, event, key)" [disabled]="inputValue === event[key]">ok</button>
           <button (click)="leaveEditMode($event)">x</button>
         </ng-container>
