--- a/src/app/components/table/table.component.css
+++ b/src/app/components/table/table.component.css
@@ -5,6 +5,11 @@ table {
   width: 100%;
 }
 
+th {
+  text-transform: capitalize;
+  white-space: nowrap;
+}
+
 td, th {
   border: 1px solid #dddddd;
   text-align: left;
